Some small tweaks to the Stamp Detail View.

--- a/internal/projects/bulleit/Stamped/StampsListViewController.xib
+++ b/internal/projects/bulleit/Stamped/StampsListViewController.xib
@@ -2,10 +2,10 @@
 <archive type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="7.10">
 	<data>
 		<int key="IBDocument.SystemTarget">1280</int>
-		<string key="IBDocument.SystemVersion">10K540</string>
+		<string key="IBDocument.SystemVersion">11A511</string>
 		<string key="IBDocument.InterfaceBuilderVersion">1891</string>
-		<string key="IBDocument.AppKitVersion">1038.36</string>
-		<string key="IBDocument.HIToolboxVersion">461.00</string>
+		<string key="IBDocument.AppKitVersion">1138</string>
+		<string key="IBDocument.HIToolboxVersion">566.00</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginVersions">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 			<string key="NS.object.0">884</string>
@@ -54,7 +54,7 @@
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="606200188"/>
 								<bool key="IBUIOpaque">NO</bool>
-								<string key="IBUIContentStretch">{{0, 1.38778e-17}, {1, 1}}</string>
+								<string key="IBUIContentStretch">{{0, 1.3877799999999999e-17}, {1, 1}}</string>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<int key="IBUIContentHorizontalAlignment">0</int>
 								<int key="IBUIContentVerticalAlignment">0</int>
@@ -103,7 +103,7 @@
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="79025483"/>
 								<bool key="IBUIOpaque">NO</bool>
-								<string key="IBUIContentStretch">{{0, 1.38778e-17}, {1, 1}}</string>
+								<string key="IBUIContentStretch">{{0, 1.3877799999999999e-17}, {1, 1}}</string>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<int key="IBUIContentHorizontalAlignment">0</int>
 								<int key="IBUIContentVerticalAlignment">0</int>
@@ -137,7 +137,7 @@
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="68374884"/>
 								<bool key="IBUIOpaque">NO</bool>
-								<string key="IBUIContentStretch">{{0, 1.38778e-17}, {1, 1}}</string>
+								<string key="IBUIContentStretch">{{0, 1.3877799999999999e-17}, {1, 1}}</string>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<int key="IBUIContentHorizontalAlignment">0</int>
 								<int key="IBUIContentVerticalAlignment">0</int>
@@ -171,7 +171,7 @@
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="795149255"/>
 								<bool key="IBUIOpaque">NO</bool>
-								<string key="IBUIContentStretch">{{0, 1.38778e-17}, {1, 1}}</string>
+								<string key="IBUIContentStretch">{{0, 1.3877799999999999e-17}, {1, 1}}</string>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<int key="IBUIContentHorizontalAlignment">0</int>
 								<int key="IBUIContentVerticalAlignment">0</int>
@@ -205,7 +205,7 @@
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="903731289"/>
 								<bool key="IBUIOpaque">NO</bool>
-								<string key="IBUIContentStretch">{{0, 1.38778e-17}, {1, 1}}</string>
+								<string key="IBUIContentStretch">{{0, 1.3877799999999999e-17}, {1, 1}}</string>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<int key="IBUIContentHorizontalAlignment">0</int>
 								<int key="IBUIContentVerticalAlignment">0</int>
@@ -239,7 +239,7 @@
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="1014841473"/>
 								<bool key="IBUIOpaque">NO</bool>
-								<string key="IBUIContentStretch">{{0, 1.38778e-17}, {1, 1}}</string>
+								<string key="IBUIContentStretch">{{0, 1.3877799999999999e-17}, {1, 1}}</string>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<int key="IBUIContentHorizontalAlignment">0</int>
 								<int key="IBUIContentVerticalAlignment">0</int>
@@ -352,42 +352,6 @@
 					<int key="connectionID">7</int>
 				</object>
 				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchEventConnection" key="connection">
-						<string key="label">filterButtonPushed:</string>
-						<reference key="source" ref="372919310"/>
-						<reference key="destination" ref="372490531"/>
-						<int key="IBEventType">7</int>
-					</object>
-					<int key="connectionID">23</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchEventConnection" key="connection">
-						<string key="label">filterButtonPushed:</string>
-						<reference key="source" ref="606200188"/>
-						<reference key="destination" ref="372490531"/>
-						<int key="IBEventType">7</int>
-					</object>
-					<int key="connectionID">24</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchEventConnection" key="connection">
-						<string key="label">filterButtonPushed:</string>
-						<reference key="source" ref="79025483"/>
-						<reference key="destination" ref="372490531"/>
-						<int key="IBEventType">7</int>
-					</object>
-					<int key="connectionID">25</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchEventConnection" key="connection">
-						<string key="label">filterButtonPushed:</string>
-						<reference key="source" ref="68374884"/>
-						<reference key="destination" ref="372490531"/>
-						<int key="IBEventType">7</int>
-					</object>
-					<int key="connectionID">26</int>
-				</object>
-				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">booksFilterButton_</string>
 						<reference key="source" ref="372490531"/>
@@ -426,6 +390,42 @@
 						<reference key="destination" ref="566224778"/>
 					</object>
 					<int key="connectionID">33</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchEventConnection" key="connection">
+						<string key="label">filterButtonPushed:</string>
+						<reference key="source" ref="372919310"/>
+						<reference key="destination" ref="372490531"/>
+						<int key="IBEventType">1</int>
+					</object>
+					<int key="connectionID">36</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchEventConnection" key="connection">
+						<string key="label">filterButtonPushed:</string>
+						<reference key="source" ref="606200188"/>
+						<reference key="destination" ref="372490531"/>
+						<int key="IBEventType">1</int>
+					</object>
+					<int key="connectionID">37</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchEventConnection" key="connection">
+						<string key="label">filterButtonPushed:</string>
+						<reference key="source" ref="79025483"/>
+						<reference key="destination" ref="372490531"/>
+						<int key="IBEventType">1</int>
+					</object>
+					<int key="connectionID">38</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchEventConnection" key="connection">
+						<string key="label">filterButtonPushed:</string>
+						<reference key="source" ref="68374884"/>
+						<reference key="destination" ref="372490531"/>
+						<int key="IBEventType">1</int>
+					</object>
+					<int key="connectionID">40</int>
 				</object>
 			</object>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -578,7 +578,7 @@
 				<reference key="dict.values" ref="0"/>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">35</int>
+			<int key="maxID">40</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
