--- a/internal/projects/bulleit/Stamped/StampDetailViewController.xib
+++ b/internal/projects/bulleit/Stamped/StampDetailViewController.xib
@@ -16,7 +16,9 @@
 			<string>IBUIScrollView</string>
 			<string>IBProxyObject</string>
 			<string>IBUILabel</string>
+			<string>IBUIImageView</string>
 			<string>IBUITextField</string>
+			<string>IBUIViewController</string>
 			<string>IBUITableViewCell</string>
 			<string>IBUIButton</string>
 		</object>
@@ -95,13 +97,13 @@
 								<int key="NSvFlags">310</int>
 								<object class="NSMutableArray" key="NSSubviews">
 									<bool key="EncodedWithXMLCoder">YES</bool>
-									<object class="IBUIView" id="655520347">
+									<object class="IBUIView" id="288918524">
 										<reference key="NSNextResponder" ref="749710472"/>
-										<int key="NSvFlags">292</int>
-										<string key="NSFrame">{{10, 10}, {55, 55}}</string>
+										<int key="NSvFlags">274</int>
+										<string key="NSFrame">{{0, 4}, {310, 161}}</string>
 										<reference key="NSSuperview" ref="749710472"/>
 										<reference key="NSWindow"/>
-										<reference key="NSNextKeyView" ref="961485524"/>
+										<reference key="NSNextKeyView" ref="655520347"/>
 										<object class="NSColor" key="IBUIBackgroundColor">
 											<int key="NSColorSpace">3</int>
 											<bytes key="NSWhite">MQA</bytes>
@@ -111,10 +113,24 @@
 										</object>
 										<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 									</object>
+									<object class="IBUIView" id="655520347">
+										<reference key="NSNextResponder" ref="749710472"/>
+										<int key="NSvFlags">292</int>
+										<string key="NSFrame">{{10, 12}, {55, 55}}</string>
+										<reference key="NSSuperview" ref="749710472"/>
+										<reference key="NSWindow"/>
+										<reference key="NSNextKeyView" ref="961485524"/>
+										<object class="NSColor" key="IBUIBackgroundColor">
+											<int key="NSColorSpace">3</int>
+											<bytes key="NSWhite">MQA</bytes>
+											<reference key="NSCustomColorSpace" ref="66764138"/>
+										</object>
+										<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+									</object>
 									<object class="IBUILabel" id="648052524">
 										<reference key="NSNextResponder" ref="749710472"/>
 										<int key="NSvFlags">292</int>
-										<string key="NSFrame">{{205, 10}, {55, 18}}</string>
+										<string key="NSFrame">{{205, 12}, {55, 18}}</string>
 										<reference key="NSSuperview" ref="749710472"/>
 										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="271529655"/>
@@ -146,7 +162,7 @@
 									<object class="IBUILabel" id="961485524">
 										<reference key="NSNextResponder" ref="749710472"/>
 										<int key="NSvFlags">292</int>
-										<string key="NSFrame">{{75, 10}, {122, 18}}</string>
+										<string key="NSFrame">{{75, 12}, {122, 18}}</string>
 										<reference key="NSSuperview" ref="749710472"/>
 										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="648052524"/>
@@ -170,6 +186,22 @@
 											<string key="NSName">Helvetica-Bold</string>
 											<double key="NSSize">14</double>
 											<int key="NSfFlags">16</int>
+										</object>
+									</object>
+									<object class="IBUIImageView" id="511216842">
+										<reference key="NSNextResponder" ref="749710472"/>
+										<int key="NSvFlags">292</int>
+										<string key="NSFrameSize">{310, 4}</string>
+										<reference key="NSSuperview" ref="749710472"/>
+										<reference key="NSWindow"/>
+										<reference key="NSNextKeyView" ref="288918524"/>
+										<bool key="IBUIClipsSubviews">YES</bool>
+										<int key="IBUIContentMode">2</int>
+										<bool key="IBUIUserInteractionEnabled">NO</bool>
+										<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+										<object class="NSCustomResource" key="IBUIImage">
+											<string key="NSClassName">NSImage</string>
+											<string key="NSResourceName">stamp_detail_ripple_top</string>
 										</object>
 									</object>
 									<object class="IBUIView" id="271529655">
@@ -196,7 +228,7 @@
 												<string key="NSFrame">{{50, 11}, {250, 31}}</string>
 												<reference key="NSSuperview" ref="271529655"/>
 												<reference key="NSWindow"/>
-												<reference key="NSNextKeyView" ref="452184484"/>
+												<reference key="NSNextKeyView" ref="661979840"/>
 												<bool key="IBUIClipsSubviews">YES</bool>
 												<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 												<int key="IBUIContentVerticalAlignment">0</int>
@@ -211,6 +243,9 @@
 												<bool key="IBUIAdjustsFontSizeToFit">YES</bool>
 												<float key="IBUIMinimumFontSize">17</float>
 												<object class="IBUITextInputTraits" key="IBUITextInputTraits">
+													<int key="IBUIKeyboardAppearance">1</int>
+													<int key="IBUIReturnKeyType">7</int>
+													<bool key="IBUIEnablesReturnKeyAutomatically">YES</bool>
 													<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 												</object>
 												<reference key="IBUIFontDescription" ref="596960651"/>
@@ -231,26 +266,50 @@
 												<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 											</object>
 										</object>
-										<string key="NSFrame">{{0, 75}, {310, 51}}</string>
+										<string key="NSFrame">{{0, 112}, {310, 53}}</string>
 										<reference key="NSSuperview" ref="749710472"/>
 										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="155746071"/>
-										<object class="NSColor" key="IBUIBackgroundColor">
+										<reference key="IBUIBackgroundColor" ref="124712397"/>
+										<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+									</object>
+									<object class="IBUIImageView" id="661979840">
+										<reference key="NSNextResponder" ref="749710472"/>
+										<int key="NSvFlags">266</int>
+										<string key="NSFrame">{{0, 165}, {310, 4}}</string>
+										<reference key="NSSuperview" ref="749710472"/>
+										<reference key="NSWindow"/>
+										<reference key="NSNextKeyView" ref="10497491"/>
+										<bool key="IBUIClipsSubviews">YES</bool>
+										<int key="IBUIContentMode">2</int>
+										<bool key="IBUIUserInteractionEnabled">NO</bool>
+										<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+										<object class="NSCustomResource" key="IBUIImage">
+											<string key="NSClassName">NSImage</string>
+											<string key="NSResourceName">stamp_detail_ripple_bottom</string>
+										</object>
+									</object>
+									<object class="IBUIView" id="10497491">
+										<reference key="NSNextResponder" ref="749710472"/>
+										<int key="NSvFlags">266</int>
+										<string key="NSFrame">{{0, 169}, {310, 1}}</string>
+										<reference key="NSSuperview" ref="749710472"/>
+										<reference key="NSWindow"/>
+										<reference key="NSNextKeyView" ref="452184484"/>
+										<object class="NSColor" key="IBUIBackgroundColor" id="140928236">
 											<int key="NSColorSpace">3</int>
 											<bytes key="NSWhite">MQA</bytes>
-											<reference key="NSCustomColorSpace" ref="66764138"/>
 										</object>
 										<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 									</object>
 								</object>
-								<string key="NSFrame">{{5, 69}, {310, 126}}</string>
+								<string key="NSFrame">{{5, 69}, {310, 170}}</string>
 								<reference key="NSSuperview" ref="490942180"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="655520347"/>
+								<reference key="NSNextKeyView" ref="511216842"/>
 								<object class="NSColor" key="IBUIBackgroundColor">
-									<int key="NSColorSpace">3</int>
-									<bytes key="NSWhite">MQA</bytes>
-									<reference key="NSCustomColorSpace" ref="66764138"/>
+									<int key="NSColorSpace">2</int>
+									<bytes key="NSRGB">MC4yODIzNTI5NTQxIDAuNzAxOTYwODAyMSAwLjIyNzQ1MDk5NjYAA</bytes>
 								</object>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 							</object>
@@ -272,10 +331,7 @@
 						<reference key="NSSuperview" ref="880728759"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="600580011"/>
-						<object class="NSColor" key="IBUIBackgroundColor" id="140928236">
-							<int key="NSColorSpace">3</int>
-							<bytes key="NSWhite">MQA</bytes>
-						</object>
+						<reference key="IBUIBackgroundColor" ref="140928236"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 					</object>
@@ -404,6 +460,15 @@
 					<bool key="IBUIPrompted">NO</bool>
 				</object>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+			</object>
+			<object class="IBUIViewController" id="558121045">
+				<object class="IBUISimulatedStatusBarMetrics" key="IBUISimulatedStatusBarMetrics"/>
+				<object class="IBUISimulatedOrientationMetrics" key="IBUISimulatedOrientationMetrics">
+					<int key="IBUIInterfaceOrientation">1</int>
+					<int key="interfaceOrientation">1</int>
+				</object>
+				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+				<bool key="IBUIHorizontal">NO</bool>
 			</object>
 		</object>
 		<object class="IBObjectContainer" key="IBDocument.Objects">
@@ -586,6 +651,10 @@
 							<reference ref="655520347"/>
 							<reference ref="961485524"/>
 							<reference ref="648052524"/>
+							<reference ref="511216842"/>
+							<reference ref="10497491"/>
+							<reference ref="661979840"/>
+							<reference ref="288918524"/>
 						</object>
 						<reference key="parent" ref="490942180"/>
 						<string key="objectName">Activity View</string>
@@ -645,6 +714,35 @@
 						<reference key="object" ref="648052524"/>
 						<reference key="parent" ref="749710472"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">44</int>
+						<reference key="object" ref="511216842"/>
+						<reference key="parent" ref="749710472"/>
+						<string key="objectName">Top Ripple</string>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">45</int>
+						<reference key="object" ref="661979840"/>
+						<reference key="parent" ref="749710472"/>
+						<string key="objectName">Bottom Ripple</string>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">46</int>
+						<reference key="object" ref="558121045"/>
+						<reference key="parent" ref="0"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">47</int>
+						<reference key="object" ref="10497491"/>
+						<reference key="parent" ref="749710472"/>
+						<string key="objectName">White bottom border</string>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">48</int>
+						<reference key="object" ref="288918524"/>
+						<reference key="parent" ref="749710472"/>
+						<string key="objectName">White Mask</string>
+					</object>
 				</object>
 			</object>
 			<object class="NSMutableDictionary" key="flattenedProperties">
@@ -677,6 +775,11 @@
 					<string>38.IBPluginDependency</string>
 					<string>40.IBPluginDependency</string>
 					<string>41.IBPluginDependency</string>
+					<string>44.IBPluginDependency</string>
+					<string>45.IBPluginDependency</string>
+					<string>46.IBPluginDependency</string>
+					<string>47.IBPluginDependency</string>
+					<string>48.IBPluginDependency</string>
 				</object>
 				<object class="NSMutableArray" key="dict.values">
 					<bool key="EncodedWithXMLCoder">YES</bool>
@@ -685,7 +788,7 @@
 					<string>UIResponder</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-					<object class="NSArray">
+					<object class="NSMutableArray">
 						<bool key="EncodedWithXMLCoder">YES</bool>
 						<object class="IBUserGuide">
 							<reference key="view" ref="880728759"/>
@@ -697,35 +800,15 @@
 							<double key="location">305</double>
 							<int key="affinity">0</int>
 						</object>
-						<object class="IBUserGuide">
-							<reference key="view" ref="880728759"/>
-							<double key="location">144</double>
-							<int key="affinity">1</int>
-						</object>
-						<object class="IBUserGuide">
-							<reference key="view" ref="880728759"/>
-							<double key="location">196</double>
-							<int key="affinity">1</int>
-						</object>
 					</object>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-					<object class="NSArray">
+					<object class="NSMutableArray">
 						<bool key="EncodedWithXMLCoder">YES</bool>
 						<object class="IBUserGuide">
 							<reference key="view" ref="490942180"/>
 							<double key="location">15</double>
 							<int key="affinity">0</int>
-						</object>
-						<object class="IBUserGuide">
-							<reference key="view" ref="490942180"/>
-							<double key="location">155</double>
-							<int key="affinity">1</int>
-						</object>
-						<object class="IBUserGuide">
-							<reference key="view" ref="490942180"/>
-							<double key="location">186</double>
-							<int key="affinity">1</int>
 						</object>
 						<object class="IBUserGuide">
 							<reference key="view" ref="490942180"/>
@@ -752,6 +835,11 @@
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				</object>
 			</object>
 			<object class="NSMutableDictionary" key="unlocalizedProperties">
@@ -766,7 +854,7 @@
 				<reference key="dict.values" ref="0"/>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">43</int>
+			<int key="maxID">48</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -893,9 +981,13 @@
 				<string>must_do</string>
 				<string>share</string>
 				<string>stamp</string>
+				<string>stamp_detail_ripple_bottom</string>
+				<string>stamp_detail_ripple_top</string>
 			</object>
 			<object class="NSMutableArray" key="dict.values">
 				<bool key="EncodedWithXMLCoder">YES</bool>
+				<string>{16, 16}</string>
+				<string>{16, 16}</string>
 				<string>{16, 16}</string>
 				<string>{16, 16}</string>
 				<string>{16, 16}</string>
