--- a/internal/projects/bulleit/Stamped/InboxViewController.xib
+++ b/internal/projects/bulleit/Stamped/InboxViewController.xib
@@ -2,10 +2,10 @@
 <archive type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="7.10">
 	<data>
 		<int key="IBDocument.SystemTarget">1280</int>
-		<string key="IBDocument.SystemVersion">11A511</string>
+		<string key="IBDocument.SystemVersion">10K540</string>
 		<string key="IBDocument.InterfaceBuilderVersion">1891</string>
-		<string key="IBDocument.AppKitVersion">1138</string>
-		<string key="IBDocument.HIToolboxVersion">566.00</string>
+		<string key="IBDocument.AppKitVersion">1038.36</string>
+		<string key="IBDocument.HIToolboxVersion">461.00</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginVersions">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 			<string key="NS.object.0">884</string>
@@ -54,7 +54,7 @@
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="606200188"/>
 								<bool key="IBUIOpaque">NO</bool>
-								<string key="IBUIContentStretch">{{0, 1.3877799999999999e-17}, {1, 1}}</string>
+								<string key="IBUIContentStretch">{{0, 1.38778e-17}, {1, 1}}</string>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<int key="IBUIContentHorizontalAlignment">0</int>
 								<int key="IBUIContentVerticalAlignment">0</int>
@@ -103,7 +103,7 @@
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="79025483"/>
 								<bool key="IBUIOpaque">NO</bool>
-								<string key="IBUIContentStretch">{{0, 1.3877799999999999e-17}, {1, 1}}</string>
+								<string key="IBUIContentStretch">{{0, 1.38778e-17}, {1, 1}}</string>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<int key="IBUIContentHorizontalAlignment">0</int>
 								<int key="IBUIContentVerticalAlignment">0</int>
@@ -137,7 +137,7 @@
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="68374884"/>
 								<bool key="IBUIOpaque">NO</bool>
-								<string key="IBUIContentStretch">{{0, 1.3877799999999999e-17}, {1, 1}}</string>
+								<string key="IBUIContentStretch">{{0, 1.38778e-17}, {1, 1}}</string>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<int key="IBUIContentHorizontalAlignment">0</int>
 								<int key="IBUIContentVerticalAlignment">0</int>
@@ -171,7 +171,7 @@
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="795149255"/>
 								<bool key="IBUIOpaque">NO</bool>
-								<string key="IBUIContentStretch">{{0, 1.3877799999999999e-17}, {1, 1}}</string>
+								<string key="IBUIContentStretch">{{0, 1.38778e-17}, {1, 1}}</string>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<int key="IBUIContentHorizontalAlignment">0</int>
 								<int key="IBUIContentVerticalAlignment">0</int>
@@ -205,7 +205,7 @@
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="903731289"/>
 								<bool key="IBUIOpaque">NO</bool>
-								<string key="IBUIContentStretch">{{0, 1.3877799999999999e-17}, {1, 1}}</string>
+								<string key="IBUIContentStretch">{{0, 1.38778e-17}, {1, 1}}</string>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<int key="IBUIContentHorizontalAlignment">0</int>
 								<int key="IBUIContentVerticalAlignment">0</int>
@@ -239,7 +239,7 @@
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="1014841473"/>
 								<bool key="IBUIOpaque">NO</bool>
-								<string key="IBUIContentStretch">{{0, 1.3877799999999999e-17}, {1, 1}}</string>
+								<string key="IBUIContentStretch">{{0, 1.38778e-17}, {1, 1}}</string>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<int key="IBUIContentHorizontalAlignment">0</int>
 								<int key="IBUIContentVerticalAlignment">0</int>
@@ -278,6 +278,7 @@
 								<string key="NSFrame">{{0, 47}, {320, 5}}</string>
 								<reference key="NSSuperview" ref="566224778"/>
 								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView"/>
 								<int key="IBUIContentMode">1</int>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -545,7 +546,7 @@
 				</object>
 				<object class="NSMutableArray" key="dict.values">
 					<bool key="EncodedWithXMLCoder">YES</bool>
-					<string>StampsListViewController</string>
+					<string>InboxViewController</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>UIResponder</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -584,7 +585,7 @@
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
 				<bool key="EncodedWithXMLCoder">YES</bool>
 				<object class="IBPartialClassDescription">
-					<string key="className">StampsListViewController</string>
+					<string key="className">InboxViewController</string>
 					<string key="superclassName">UITableViewController</string>
 					<object class="NSMutableDictionary" key="actions">
 						<string key="NS.key.0">filterButtonPushed:</string>
@@ -652,7 +653,7 @@
 					</object>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/StampsListViewController.h</string>
+						<string key="minorKey">./Classes/InboxViewController.h</string>
 					</object>
 				</object>
 			</object>
