--- a/internal/projects/bulleit/Stamped/StampDetailViewController.xib
+++ b/internal/projects/bulleit/Stamped/StampDetailViewController.xib
@@ -3,12 +3,12 @@
 	<data>
 		<int key="IBDocument.SystemTarget">1280</int>
 		<string key="IBDocument.SystemVersion">11A511</string>
-		<string key="IBDocument.InterfaceBuilderVersion">1891</string>
+		<string key="IBDocument.InterfaceBuilderVersion">1900</string>
 		<string key="IBDocument.AppKitVersion">1138</string>
 		<string key="IBDocument.HIToolboxVersion">566.00</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginVersions">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-			<string key="NS.object.0">884</string>
+			<string key="NS.object.0">894</string>
 		</object>
 		<object class="NSArray" key="IBDocument.IntegratedClassDependencies">
 			<bool key="EncodedWithXMLCoder">YES</bool>
@@ -58,7 +58,7 @@
 									<object class="IBUIView" id="722394477">
 										<reference key="NSNextResponder" ref="15073625"/>
 										<int key="NSvFlags">256</int>
-										<string key="NSFrameSize">{300, 68}</string>
+										<string key="NSFrame">{{1, 0}, {298, 67}}</string>
 										<reference key="NSSuperview" ref="15073625"/>
 										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="749710472"/>
@@ -261,6 +261,7 @@
 												<bool key="IBUIAdjustsFontSizeToFit">YES</bool>
 												<float key="IBUIMinimumFontSize">17</float>
 												<object class="IBUITextInputTraits" key="IBUITextInputTraits">
+													<int key="IBUIAutocapitalizationType">2</int>
 													<int key="IBUIKeyboardAppearance">1</int>
 													<int key="IBUIReturnKeyType">7</int>
 													<bool key="IBUIEnablesReturnKeyAutomatically">YES</bool>
@@ -441,7 +442,6 @@
 						<string key="NSFrame">{{240, 367}, {80, 49}}</string>
 						<reference key="NSSuperview" ref="880728759"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<int key="IBUIContentMode">1</int>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -1068,6 +1068,6 @@
 				<string>{16, 16}</string>
 			</object>
 		</object>
-		<string key="IBCocoaTouchPluginVersion">884</string>
+		<string key="IBCocoaTouchPluginVersion">894</string>
 	</data>
 </archive>
