--- a/internal/projects/bulleit/Stamped/InboxViewController.xib
+++ b/internal/projects/bulleit/Stamped/InboxViewController.xib
@@ -2,13 +2,13 @@
 <archive type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="7.10">
 	<data>
 		<int key="IBDocument.SystemTarget">1280</int>
-		<string key="IBDocument.SystemVersion">10K540</string>
-		<string key="IBDocument.InterfaceBuilderVersion">1891</string>
-		<string key="IBDocument.AppKitVersion">1038.36</string>
-		<string key="IBDocument.HIToolboxVersion">461.00</string>
+		<string key="IBDocument.SystemVersion">11A511</string>
+		<string key="IBDocument.InterfaceBuilderVersion">1900</string>
+		<string key="IBDocument.AppKitVersion">1138</string>
+		<string key="IBDocument.HIToolboxVersion">566.00</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginVersions">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-			<string key="NS.object.0">884</string>
+			<string key="NS.object.0">894</string>
 		</object>
 		<object class="NSArray" key="IBDocument.IntegratedClassDependencies">
 			<bool key="EncodedWithXMLCoder">YES</bool>
@@ -54,7 +54,7 @@
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="606200188"/>
 								<bool key="IBUIOpaque">NO</bool>
-								<string key="IBUIContentStretch">{{0, 1.38778e-17}, {1, 1}}</string>
+								<string key="IBUIContentStretch">{{0, 1.3877799999999999e-17}, {1, 1}}</string>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<int key="IBUIContentHorizontalAlignment">0</int>
 								<int key="IBUIContentVerticalAlignment">0</int>
@@ -103,7 +103,7 @@
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="79025483"/>
 								<bool key="IBUIOpaque">NO</bool>
-								<string key="IBUIContentStretch">{{0, 1.38778e-17}, {1, 1}}</string>
+								<string key="IBUIContentStretch">{{0, 1.3877799999999999e-17}, {1, 1}}</string>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<int key="IBUIContentHorizontalAlignment">0</int>
 								<int key="IBUIContentVerticalAlignment">0</int>
@@ -137,7 +137,7 @@
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="68374884"/>
 								<bool key="IBUIOpaque">NO</bool>
-								<string key="IBUIContentStretch">{{0, 1.38778e-17}, {1, 1}}</string>
+								<string key="IBUIContentStretch">{{0, 1.3877799999999999e-17}, {1, 1}}</string>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<int key="IBUIContentHorizontalAlignment">0</int>
 								<int key="IBUIContentVerticalAlignment">0</int>
@@ -171,7 +171,7 @@
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="795149255"/>
 								<bool key="IBUIOpaque">NO</bool>
-								<string key="IBUIContentStretch">{{0, 1.38778e-17}, {1, 1}}</string>
+								<string key="IBUIContentStretch">{{0, 1.3877799999999999e-17}, {1, 1}}</string>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<int key="IBUIContentHorizontalAlignment">0</int>
 								<int key="IBUIContentVerticalAlignment">0</int>
@@ -205,7 +205,7 @@
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="903731289"/>
 								<bool key="IBUIOpaque">NO</bool>
-								<string key="IBUIContentStretch">{{0, 1.38778e-17}, {1, 1}}</string>
+								<string key="IBUIContentStretch">{{0, 1.3877799999999999e-17}, {1, 1}}</string>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<int key="IBUIContentHorizontalAlignment">0</int>
 								<int key="IBUIContentVerticalAlignment">0</int>
@@ -239,7 +239,7 @@
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="1014841473"/>
 								<bool key="IBUIOpaque">NO</bool>
-								<string key="IBUIContentStretch">{{0, 1.38778e-17}, {1, 1}}</string>
+								<string key="IBUIContentStretch">{{0, 1.3877799999999999e-17}, {1, 1}}</string>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<int key="IBUIContentHorizontalAlignment">0</int>
 								<int key="IBUIContentVerticalAlignment">0</int>
@@ -278,7 +278,6 @@
 								<string key="NSFrame">{{0, 47}, {320, 5}}</string>
 								<reference key="NSSuperview" ref="566224778"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView"/>
 								<int key="IBUIContentMode">1</int>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -319,7 +318,7 @@
 				<int key="IBUISeparatorStyle">1</int>
 				<int key="IBUISectionIndexMinimumDisplayRowCount">0</int>
 				<bool key="IBUIShowsSelectionImmediatelyOnTouchBegin">YES</bool>
-				<float key="IBUIRowHeight">83</float>
+				<float key="IBUIRowHeight">84</float>
 				<float key="IBUISectionHeaderHeight">22</float>
 				<float key="IBUISectionFooterHeight">22</float>
 				<reference key="IBUITableHeaderView" ref="566224778"/>
@@ -701,6 +700,6 @@
 				<string>{16, 16}</string>
 			</object>
 		</object>
-		<string key="IBCocoaTouchPluginVersion">884</string>
+		<string key="IBCocoaTouchPluginVersion">894</string>
 	</data>
 </archive>
