--- a/internal/projects/bulleit/Stamped/StampDetailViewController.xib
+++ b/internal/projects/bulleit/Stamped/StampDetailViewController.xib
@@ -153,16 +153,12 @@
 												<int key="IBUIBaselineAdjustment">1</int>
 												<float key="IBUIMinimumFontSize">14</float>
 												<object class="IBUIFontDescription" key="IBUIFontDescription">
-													<string key="name">HelveticaNeue</string>
-													<string key="family">Helvetica Neue</string>
+													<string key="name">Helvetica</string>
+													<string key="family">Helvetica</string>
 													<int key="traits">0</int>
 													<double key="pointSize">14</double>
 												</object>
-												<object class="NSFont" key="IBUIFont">
-													<string key="NSName">HelveticaNeue-Medium</string>
-													<double key="NSSize">14</double>
-													<int key="NSfFlags">16</int>
-												</object>
+												<reference key="IBUIFont" ref="633126733"/>
 											</object>
 											<object class="IBUILabel" id="961485524">
 												<reference key="NSNextResponder" ref="75653363"/>
