--- a/internal/projects/bulleit/Stamped/CreateStampViewController.xib
+++ b/internal/projects/bulleit/Stamped/CreateStampViewController.xib
@@ -50,18 +50,18 @@
 							<object class="IBUIImageView" id="672323501">
 								<reference key="NSNextResponder" ref="709319091"/>
 								<int key="NSvFlags">274</int>
-								<string key="NSFrame">{{0, -23}, {320, 72}}</string>
+								<string key="NSFrame">{{0, -190}, {320, 240}}</string>
 								<reference key="NSSuperview" ref="709319091"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="780588220"/>
 								<string key="NSReuseIdentifierKey">_NS:363</string>
 								<bool key="IBUIOpaque">NO</bool>
-								<int key="IBUIContentMode">2</int>
+								<int key="IBUIContentMode">6</int>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<object class="NSCustomResource" key="IBUIImage">
 									<string key="NSClassName">NSImage</string>
-									<string key="NSResourceName">shelf_background</string>
+									<string key="NSResourceName">shelf_background.png</string>
 								</object>
 							</object>
 							<object class="IBUITextField" id="780588220">
@@ -425,14 +425,14 @@
 				<string>cancel_background@2x.png</string>
 				<string>cancel_pressed_background@2x.png</string>
 				<string>search_field_background@2x.png</string>
-				<string>shelf_background</string>
+				<string>shelf_background.png</string>
 			</object>
 			<object class="NSMutableArray" key="dict.values">
 				<bool key="EncodedWithXMLCoder">YES</bool>
 				<string>{5, 58}</string>
 				<string>{5, 58}</string>
 				<string>{492, 58}</string>
-				<string>{16, 16}</string>
+				<string>{320, 240}</string>
 			</object>
 		</object>
 		<string key="IBCocoaTouchPluginVersion">894</string>
